Code cleanup and latest CSS and template for overflow fix
PELAGOS-1172

--- a/web/applications/dif/includes/css/dif.css
+++ b/web/applications/dif/includes/css/dif.css
@@ -128,4 +128,5 @@ label:not(.button)
 .diftree
 {
   position:absolute;top:0px;left:0px;bottom:0px;right:0px;overflow-y:auto;overflow-x:hidden;
+  padding-bottom:20px;
 }
